set up drop down menu with routes

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1691,6 +1691,11 @@ input, select, textarea {
 
 /* Image */
 
+  .image-resize {
+  max-width:25%;
+  max-height:25%;
+  }
+
 	.image {
 		display: inline-block;
 		outline: 0;
@@ -2181,8 +2186,8 @@ input, select, textarea {
 		background-repeat: no-repeat;
 		text-align: center;
 		position: relative;
-		padding: 8em 0;
-		margin: 4em 0 0 0;
+		padding: 2em 0;
+		margin: 2em 0 0 0;
 	}
 
 		#banner header {
@@ -2875,7 +2880,7 @@ input, select, textarea {
 		/* Banner */
 
 			#banner {
-				padding: 6em 0;
+				padding: 2em 0;
 				margin: 2em 0 0 0;
 			}
 
