final push check

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,6 +8,7 @@
 */
 .form-text { color: #ffffff }
 .form-text-alt { color: #ffffff }
+.button-color {background-color: #008CBA }
 
 
 html, body, div, span, applet, object,
