--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7,7 +7,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 .form-text { color: #ffffff }
-.form-text-alt { color: #ffffff }
+.form-text-alt { color: #000000 }
 .button-color {background-color: #008CBA }
 
 
